--- a/Prison/Prison.csproj
+++ b/Prison/Prison.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
 	<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-	<NoWarn>SA0001;SA1633;SA1200;SA1600</NoWarn>
+	<NoWarn>SA0001;SA1633;SA1200;SA1600;SA1028;SA1602</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
